fluent-syntax/test/fixtures_behavior/tag_and_attribute_together.ftl
key = Value
    .label = Foo
    #masculine
//~ ERROR E0012, pos 28
